omg its not working!

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Dynamic Pascal's Triangle</title>
+  <title>Pascal's Triangle</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
