last one PLEASE.

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
     <input id="numRows" type="number" placeholder="Number of Rows" />
     <input id="startValue" type="number" placeholder="Starting Value" />
     <button id="generateButton">Generate Pascal's Triangle</button>
+    <button id="randomizeButton">Randomize Start Value</button> <!-- New button for randomizing start value -->
   </div>
 </div>
 
@@ -95,4 +96,3 @@
 <script src="script.js"></script>
 </body>
 </html>
-
