--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     padding: 0;
   }
 
-  /* Container for the dropdown button and content */
+  /* Dropdown container */
   .dropdown {
     position: absolute;
     top: 20px;
@@ -25,6 +25,7 @@
     width: 250px;
   }
 
+  /* Button styling for dropdown */
   .dropdown button {
     background-color: #007bff;
     color: white;
@@ -37,9 +38,9 @@
     font-size: 16px;
   }
 
-  /* Styling for the dropdown content */
+  /* Dropdown content styling */
   .dropdown-content {
-    display: none;
+    display: none;  /* Hidden by default */
     background-color: #333;
     padding: 1em;
     border-radius: 8px;
@@ -81,7 +82,7 @@
 </head>
 <body>
 
-<!-- Dropdown button for showing settings -->
+<!-- Dropdown button to toggle the settings -->
 <div class="dropdown">
   <button id="dropdownButton">Settings</button>
   <div class="dropdown-content">
