--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Pascal's Triangle</title>
+<!-- Add Font Awesome for the icon -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 <style>
   /* Dark theme for the page */
   body {
@@ -25,17 +27,18 @@
     width: 250px;
   }
 
-  /* Button styling for dropdown */
+  /* Button styling for dropdown (including icon) */
   .dropdown button {
     background-color: #007bff;
     color: white;
     padding: 1em;
-    width: 100%;
+    width: 50px; /* Smaller width for the icon */
+    height: 50px; /* Make the button square */
     border: none;
-    border-radius: 4px;
+    border-radius: 50%; /* Make it circular */
     cursor: pointer;
-    text-align: left;
-    font-size: 16px;
+    text-align: center;
+    font-size: 24px; /* Bigger icon */
   }
 
   /* Dropdown content styling */
@@ -82,9 +85,11 @@
 </head>
 <body>
 
-<!-- Dropdown button to toggle the settings -->
+<!-- Dropdown button to toggle the settings (with a gear icon) -->
 <div class="dropdown">
-  <button id="dropdownButton">Settings</button>
+  <button id="dropdownButton">
+    <i class="fas fa-cog"></i> <!-- Gear icon -->
+  </button>
   <div class="dropdown-content">
     <input id="numRows" type="number" placeholder="Number of Rows" />
     <input id="startValue" type="number" placeholder="Starting Value" />
